
	* lib/pytis/cms/cms.py:
	Pytis CMS: Fixed check for duplicit order at the same level..

2009-07-15  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/_test.py:
	* lib/pytis/data/postgresql.py:
	Escape backslashes in PostgreSQL backend.

2009-07-03  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/screen.py:
	Print debug information about enabled menu items.

2009-05-18  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Don't print tracebacks on void actions in Menu form.

2009-05-06  Milan Zamazal  <pdm@brailcom.org>

	* doc/tutorials/dmp:
	DMP tutorial added.

2009-05-06  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Don't display `menu/' action identifiers in DMP forms.

2009-05-06  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix in computation of show rights.

2009-05-04  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Genmenu: When there are no access rights specified, permit everything.

2009-05-04  Milan Zamazal  <pdm@brailcom.org>

2009-04-30  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/application.py:
	Fixes of typos in has_access docstring.

2009-04-30  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/dbapi.py:
	Raise DBSystemException instead of DBException on database connection failure.

2009-07-14  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Automatically assign unique classes to web form layout groups to allow their CSS styling..

2009-07-14  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py:
	Pytis CMS: Respect changes in Wiking 'module_uri()' API..

2009-07-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Add comment for the previous change..

2009-07-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Add empty cells to ListView grid to prevent spanning of unfinished rows..

2009-07-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Disable calendar widget invocation for disabled fields in HTML forms..
