@@ -112,6 +112,11 @@
 	* lib/pytis/form/screen.py:
 	Print debug information about enabled menu items.
 
+2009-05-25  Milan Zamazal  <pdm@brailcom.org>
+
+	* tools/genmenu.py:
+	Import all specifications as actions in genmenu
+
 2009-05-18  Milan Zamazal  <pdm@brailcom.org>
 
 	* defs/menu.py:
@@ -136,8 +141,6 @@
 
 	* tools/genmenu.py:
 	Genmenu: When there are no access rights specified, permit everything.
-
-2009-05-04  Milan Zamazal  <pdm@brailcom.org>
 
 2009-04-30  Milan Zamazal  <pdm@brailcom.org>
 
